<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsandPolicy"
    android:layout_marginBottom="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Terms &amp; Conditions"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DRIVING LICENSE"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dl"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DEPOSIT"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_deposit"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INSURANCE"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_insurance"
            android:textAlignment="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="THEFT PROTECTION"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_theftprotection"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CAR HIRE AGREEMENT"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_carhire_agreement"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="FUEL"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Self-drive rates exclude fuel."
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TIME and DISTANCE"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="One day of rental is 24 hours and is calculated from base to base."
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PAYMENT"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text=" Visa and Master card accepted. Cash payments and deposits are allowed."
            android:layout_gravity="center"
            android:textAlignment="center"/>


    </LinearLayout>
</ScrollView>